# pokemon-api

./: README.md  pyproject.toml  requirements.txt
app/: config.py  crud.py  db.py  main.py  models.py  schemas.py
app/routers/: pokemon.py
